--- a/student-portal/package.json
+++ b/student-portal/package.json
@@ -11,6 +11,7 @@
     "bootstrap-vue": "^2.19.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.12",
+    "vue-line-clamp": "^1.3.2",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1"
   },
