--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "joi": "^17.3.0",
+    "mongodb": "^3.6.4",
     "mysql": "^2.18.1"
   }
 }
