--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.3.1
+bson==0.5.10
 Django==3.0.5
 djongo==1.3.4
 pymongo==3.11.3
+python-dateutil==2.8.1
 pytz==2021.1
+six==1.15.0
 sqlparse==0.2.4
